<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:paddingLeft="@dimen/expanded_view_left_margin">

    <TextView
        android:id="@+id/list_result_expanded_path_text_view"
        android:layout_width="wrap_content"
        style="@style/TabTextAppTheme"
        android:layout_height="wrap_content"
        android:text="@string/list_result_expanded_path"/>

    <TextView
        android:id="@+id/list_result_expanded_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TabTextAppTheme"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/list_result_expanded_path_text_view"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/list_result_expanded_price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TabTextAppTheme"
        android:layout_below="@id/list_result_expanded_path"
        android:text="@string/list_result_expanded_price"/>

    <TextView
        android:id="@+id/list_result_expanded_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        style="@style/TabTextAppTheme"
        android:layout_below="@id/list_result_expanded_path"
        android:layout_toRightOf="@id/list_result_expanded_path_text_view"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/list_result_expanded_departure_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TabTextAppTheme"
        android:layout_below="@id/list_result_expanded_price"
        android:text="@string/list_result_expanded_departure"/>

    <TextView
        android:id="@+id/list_result_expanded_departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TabTextAppTheme"
        android:layout_below="@id/list_result_expanded_price"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/list_result_expanded_path_text_view"
        android:textStyle="bold"/>

</RelativeLayout>